// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` direct a test   can increase number :  info pushed by Server  1`] = `
<div
  className="DirectorEle"
>
  {
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;

exports[` direct a test   can increase number :  project Edited by client 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {
    "edit": "b19999999999999999999999",
  },
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "program": Array [
          Object {
            "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
            "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
            "duration": 8,
            "importance": "a",
            "movement": "eyTbCDikPoMSt1fM",
            "movementTowards": "RSEoqq5F",
            "number": 0,
            "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
            "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
            "type": "6",
          },
          Object {
            "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
            "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
            "duration": 1,
            "importance": "D",
            "movement": "AJ6E1afGyDWOriF7",
            "movementTowards": "uoxixgKE",
            "number": 1,
            "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
            "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
            "type": "Q",
          },
          Object {
            "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
            "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
            "duration": 1,
            "importance": "s",
            "movement": "idfdbjBrAqLWs5Rm",
            "movementTowards": "3cCjebdu",
            "number": 2,
            "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
            "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
            "type": "k",
          },
        ],
        "shot": 0,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {
    "edit.projectModelb19999999999999999999999": Object {
      "_id": "b19999999999999999999999",
      "isActive": true,
      "name": "pn1",
      "program": Array [
        Object {
          "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
          "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
          "duration": 8,
          "importance": "a",
          "movement": "eyTbCDikPoMSt1fM",
          "movementTowards": "RSEoqq5F",
          "number": 0,
          "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
          "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
          "type": "6",
        },
        Object {
          "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
          "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
          "duration": 1,
          "importance": "D",
          "movement": "AJ6E1afGyDWOriF7",
          "movementTowards": "uoxixgKE",
          "number": 1,
          "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
          "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
          "type": "Q",
        },
        Object {
          "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
          "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
          "duration": 1,
          "importance": "s",
          "movement": "idfdbjBrAqLWs5Rm",
          "movementTowards": "3cCjebdu",
          "number": 2,
          "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
          "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
          "type": "k",
        },
      ],
      "shot": 0,
    },
    "edit.undefinedb19999999999999999999999": null,
  },
}
`;

exports[` direct a test   can increase number :  project pushed by server  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {},
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "program": Array [
          Object {
            "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
            "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
            "duration": 8,
            "importance": "a",
            "movement": "eyTbCDikPoMSt1fM",
            "movementTowards": "RSEoqq5F",
            "number": 0,
            "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
            "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
            "type": "6",
          },
          Object {
            "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
            "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
            "duration": 1,
            "importance": "D",
            "movement": "AJ6E1afGyDWOriF7",
            "movementTowards": "uoxixgKE",
            "number": 1,
            "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
            "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
            "type": "Q",
          },
          Object {
            "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
            "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
            "duration": 1,
            "importance": "s",
            "movement": "idfdbjBrAqLWs5Rm",
            "movementTowards": "3cCjebdu",
            "number": 2,
            "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
            "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
            "type": "k",
          },
        ],
        "shot": 1,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[` direct a test   can increase number : Before manual edits 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": null,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;

exports[` direct a test   can increase number : reduced to 0 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 0,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "loading": false,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 0,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;

exports[` direct a test   can increase number : reduced to 1 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "loading": false,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 1,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;

exports[` direct a test   can increase number : regardless of many increases the max stays at 2 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 2,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "loading": false,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 2,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;

exports[` direct a test   can increase number : stays at 0 because thats minimum 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 0,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "loading": false,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 0,
    "isActive": true,
    "program": [
      {
        "pname": "lb0pKgQm1dP2uTMfqlAdzDkBQDLwgBK0",
        "movement": "eyTbCDikPoMSt1fM",
        "movementTowards": "RSEoqq5F",
        "duration": 8,
        "importance": "a",
        "type": "6",
        "directorRemarks": "IGAWdl3Es5RrLgyH9i4ajUkUtSb0r93ahSGrTw4FdyI8LrrNZKoUMm2UxYI1WAtn",
        "operatorRemarks": "24MleLCrrSRUBN9j9KKiSYaZqYU3UelhkOUSTpNKrTHTCjMdXs4ybJ1g03bJmyMY",
        "camera": "h9e10uDEKfpv9ynz0lVb2qV6mU0JWBFo",
        "number": 0
      },
      {
        "pname": "t72crIQICSbjsxwMpgbdcaUTJfQghobI",
        "movement": "AJ6E1afGyDWOriF7",
        "movementTowards": "uoxixgKE",
        "duration": 1,
        "importance": "D",
        "type": "Q",
        "directorRemarks": "ppi8BYURzhM67Qg15qjyTeuiqih79vTnp1X2T2ZVhzm1qJR7eRnvtsL03hdEe3pa",
        "operatorRemarks": "bmsgCKGHXzzqFCQrQ1m43VGmOdRQsgekGwq4HDCVOO9k0VoBtxXMwfIFva1xe6KJ",
        "camera": "ipMvOIoliM5guD7jRCUsvP1cLnfL0FI9",
        "number": 1
      },
      {
        "pname": "NdfmepJ8zVMgvbePeC1WaPfCpE3voyDk",
        "movement": "idfdbjBrAqLWs5Rm",
        "movementTowards": "3cCjebdu",
        "duration": 1,
        "importance": "s",
        "type": "k",
        "directorRemarks": "6zdA4Dfeqil0p987y7yJF9Ce2qwU0c5oPJXsDIOmXn8ZxtAq2Pk3cX0nTcg9KkEn",
        "operatorRemarks": "xakzYkK8Lqrjhn3vADF4ACgDunAZzVMuoDmk0jZkZkMIrtR56akUp83qV4f4OJT8",
        "camera": "f8Bol9P7N6SfYNR6mTfWbKj3oh3k0bnc",
        "number": 2
      }
    ]
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  },
  "numField": {
    "title": "seperateShotField",
    "type": "number"
  }
}
</div>
`;
